k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app
  namespace: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      containers:
        - name: flask
          image: <YOUR_DOCKERHUB_ID>/demo-app:latest
          ports:
            - containerPort: 5000
