k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: devsecops
spec:
  type: NodePort
  selector:
    app: demo
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30080
